Fixed half-bg on shortener section
Original height was too short, and z-index clashed with the darker bg from its parent

--- a/src/sass/_shortener-section.scss
+++ b/src/sass/_shortener-section.scss
@@ -10,7 +10,7 @@
 	&::after {
 		content: '';
 		display: block;
-		z-index: -1;
+		z-index: -2;
 
 		width: 100vw;
 		height: 100%;
@@ -45,10 +45,10 @@
 		z-index: -1;
 
 		width: 100vw;
-		height: 50%;
+		height: calc(50% + var(--shorten-section-vertical-padding));
 
 		position: absolute;
-		top: 0;
+		top: calc(-1 * var(--shorten-section-vertical-padding));
 		left: calc(-1 * var(--main-side-padding));
 
 		background-color: white;
